// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders as expected for theme dark and type FULL 1`] = `
<div>
  <div
    class="np-logo logo logo-3 logo-inverse className"
  />
</div>
`;

exports[`Logo renders as expected for theme light and type FLAG 1`] = `
<div>
  <div
    class="np-logo flag flag-info className"
  />
</div>
`;

exports[`Logo renders as expected for theme light and type FULL 1`] = `
<div>
  <div
    class="np-logo logo logo-3 logo-primary className"
  />
</div>
`;
